# wanda-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_container.py
.github/workflows/: deploy.yaml
wanda_python/: app.py  logging_config.py  otel.py
wanda_python/controllers/: session_controller.py  validate_controller.py
wanda_python/games/: gamespec.py  registry.py  router.py
wanda_python/games/pipelines/: base_pipeline.py  bits.py  jokenpo.py
wanda_python/games/pipelines/bits/: pipeline.py  prompts.py  tests.py
wanda_python/games/prompts/: shared.py
wanda_python/runner/: container_runner.py
wanda_python/schema/: round_bits_dto.py  round_dto.py  session_dto.py  validate_dto.py
wanda_python/services/: round_service.py  validate_service.py
wanda_python/validators/: execution_validator.py  malicious_checker.py  semantics_validator.py  signature_validator.py  syntax_validator.py
