[tool.poetry]
name = "wanda-python"
version = "0.1.0"
description = ""
authors = ["Lucas Ibiapino <lucas.ibiapino07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.115.6"
opentelemetry-api = "^1.40.0"
opentelemetry-sdk = "^1.40.0"
opentelemetry-instrumentation-fastapi = "^0.61b0"
opentelemetry-instrumentation = "^0.61b0"
opentelemetry-exporter-otlp = "^1.40.0"
python-json-logger = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
